--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,7 @@ a {
   font-size: 100%;
   vertical-align: baseline;
   background: transparent;
+  text-decoration: none;
 }
 
 /* change colours to suit your needs */
